--- a/styles/main.css
+++ b/styles/main.css
@@ -22,10 +22,25 @@ body {
 .header {
   padding: 2rem;
 }
+.header .header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
-.header > .logo {
-  font-size: 2rem;
+.header .header-top .logo {
+  font-size: 1.8rem;
   font-weight: 500;
+}
+
+.header .header-top select {
+  padding: 0.4rem;
+  border-radius: 8px;
+  margin: 1rem 0;
+}
+.header .header-top select:focus {
+  outline: unset;
 }
 
 .header #search-query {
@@ -72,7 +87,7 @@ body {
   cursor: pointer;
   max-width: 400px;
   height: 300px;
-  background-color: red;
+  background-color: darkgrey;
   transition: all 0.4s ease-out;
 }
 
