--- a/styles/main.css
+++ b/styles/main.css
@@ -135,14 +135,19 @@ body {
 */
 
 .footer {
-  background-color: #1e1e1e;
+  background-color: #434141;
   color: white;
   margin-top: 1.4rem;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-radius: 28px 28px 0 0;
 }
 
 .license {
   text-align: center;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .license > a {
